ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      -  phonebook.mehmetafsar.com
      secretName: tls-secret
  rules:
    - host: phonebook.mehmetafsar.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-service
              servicePort: 80
